Fix career card spacing

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -924,6 +924,7 @@ h3 {
         line-height: 27px;
         color: #00174C;
         text-align: left;
+        margin-bottom: 0;
       }
       .card-tag {
         align-self: flex-start;
@@ -934,15 +935,17 @@ h3 {
         background: none;
         padding: 0;
         display: block;
+        margin-bottom: 0;
       }
       .card-description {
         font-size: 12px;
         line-height: 14px;
-        margin-bottom: 17px;
+        margin-top: 4px;
         text-align: left;
       }
     }
     .card-icons {
+      margin-top: 17px;
       display: flex;
       gap: 8px;
     }
@@ -2533,9 +2536,9 @@ h3 {
     gap: 6px;
     img {
       position: absolute;
-      right: -40%;
+      right: -60px;
       top: -30px;
-      max-height: 68px;
+      max-height: 80px;
     }
   }
   .text {
